syntax="proto3";
package kvstore;

option java_package="kvstore";
option java_multiple_files=true;

service KeyValueStore {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc Prepare(PrepareRequest) returns (PrepareResponse);
  rpc Commit(CommitRequest) returns (CommitResponse);
  rpc Abort(AbortRequest) returns (AbortResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool status = 1;
  bool received = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool received = 2;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool status = 1;
  bool received = 2;
}

message PrepareRequest {
  string method = 1;
  string key = 2;
  string value = 3;
}

message PrepareResponse {
  bool isPrepared = 1;
}

message CommitRequest {
  string method = 1;
  string key = 2;
  string value = 3;
}

message CommitResponse {
  bool isCommitted = 1;
}

message AbortRequest {
  string method = 1;
  string key = 2;
  string value = 3;
}

message AbortResponse {
  bool isAbort = 1;
}


